Fixed header alignment in intro.

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,6 @@ p.text-lead {
 h1 {
   font-size: 3em;
   font-weight: normal;
-  text-align: center;
 }
 p {
   text-align: justify;
